<resources>
    <string name="app_name">Virtual Clothes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">VIRTUAL CLOTHES</string>
    <string name="nav_header_subtitle_admin">Modo Administrador</string>
    <string name="nombreActividadLogin">Identificación</string>
    <string name="textoInicialActividadLogin">Virtual Clothes</string>
    <string name="aliasUsuarioActividadLogin">Introduzca su alias para identificarle</string>
    <string name="emailActividadLogin">Introduzca su email</string>
    <string name="passwordActividadLogin">Introduzca su contraseña</string>
    <string name="textoBotonActividadLogin">Iniciar sesión</string>
    <string name="terminosCondicionesActividadLogin">He leído y acepto los <u>términos y condiciones</u></string>
    <string name="textoPasswordOlvidadaActividadLogin">¿Has olvidado tu contraseña?</string>
    <string name="textoPasswordOlvidadaCambiarActividadLogin"><u>Cámbiala aquí</u></string>
    <string name="textoNoTengoCuentaActividadLogin">¿No tienes cuenta? Regístrate:</string>
    <string name="textoCrearCuentaActividadLogin">Crear cuenta</string>
    <string name="textoRegistroGoogleActividadLogin">Regístrate con tu cuenta de Google:</string>
    <string name="textoEmailVacioActividadLogin">Debe rellenar el campo email</string>
    <string name="textoPasswordVacioActividadLogin">Debe rellenar el campo contraseña</string>
    <string name="toastRegistroCorrectoActividadLogin">Realizando registro de:</string>
    <string name="toastRegistroIncorrectoActividadLogin">Autentificación fallida!</string>
    <string name="toastLoginCorrectoActividadLogin">Autentificación correcta!</string>
    <string name="toastLoginIncorrectoActividadLogin">Autentificación fallida...</string>
    <string name="toastObtenerUsuarioFalloActividadLogin">Fallo con la base de datos...</string>
    <string name="terminosCondicionesIncorrectoActividadLogin">Debe aceptar los términos y condiciones para poder acceder a la app</string>
    <string name="cambioPasswordActividadLogin">Email de cambio de contraseña enviado a:</string>
    <string name="falloCambioPasswordActividadLogin">Fallo al enviar email de cambio de contraseña</string>
    <string name="rellenaEmailCambioPasswordActividadLogin">Rellena el campo \'email\' para que te enviemos un email de restablecimiento de contraseña</string>
    <string name="textoInformacionRegistroInicial">Rellena los siguientes datos para registrarte:</string>
    <string name="nombreActividadRegistroInicial">Regístro inicial</string>
    <string name="repitaPasswordRegistroInicial">Repita su contraseña</string>
    <string name="generoDialogRegistroInicial">Género:</string>
    <string name="generoMasculinoRegistroInicial">Masculino</string>
    <string name="generoFemeninoRegistroInicial">Femenino</string>
    <string name="fechaDeNacimientoRegistroInicial">Fecha de nacimiento:</string>
    <string name="seleccionarFechaRegistroInicial">Pulsa y selecciona fecha</string>
    <string name="alturaRegistroInicial">Introduzca su altura:</string>
    <string name="pesoRegistroInicial">Introduzca su peso:</string>
    <string name="textViewAlturaRegistroInicial">Pulsar icono</string>
    <string name="textViewPesoRegistroInicial">Pulsar icono</string>
    <string name="cancelarNumberPickerRegistroInicial">Cancelar</string>
    <string name="aceptarNumberPickerRegistroInicial">Aceptar</string>
    <string name="textoNumberPickerPesoRegistroInicial">Introduzca su peso en Kg:</string>
    <string name="textoNumberPickerAlturaRegistroInicial">Introduzca su altura en cm:</string>
    <string name="botonRegistrarmeRegistroInicial">Regístrame</string>
    <string name="requerirAliasRegistroInicial">Alias requerido</string>
    <string name="aliasNoCorrectoRegistroInicial">El alias no puede tener más de 20 carácteres</string>
    <string name="requerirEmailRegistroInicial">Email requerido</string>
    <string name="requerirPasswordRegistroInicial">Contraseña requerida</string>
    <string name="requerirPasswordRepetidaRegistroInicial">Repetir contraseña para validar</string>
    <string name="formatoEmailIncorrectoRegistroInicial">El formato de email no es correcto</string>
    <string name="formatoPasswordIncorrectoRegistroInicial">Formato:\n- De 8 a 15 carácteres\n- 1 Mayúscula\n- 1 Minúscula\n- 1 Carácter especial\n- 1 Dígito\n- Sin espacios en blanco</string>
    <string name="toastEmailVacioRegistroIncial">Campo email vacio. Por favor, introduzca su email.</string>
    <string name="toastPasswordVaciaRegistroIncial">Campo de contraseña vacia. Por favor, introduzca su contraseña.</string>
    <string name="toastPasswordRepetidaVaciaRegistroIncial">Campo de repetir contraseña vacio. Por favor, vuelva a introducir su contraseña</string>
    <string name="toastPasswordNoCoincidenRegistroIncial">Ambas contraseñas deben ser iguales. Por favor, introduzca la misma contraseña en ambos campos</string>
    <string name="toastFechaVaciaRegistroIncial">Fecha de nacimiento no introducida. Por favor, seleccione su fecha de nacimiento.</string>
    <string name="toastAlturaVaciaRegistroIncial">Altura no seleccionada. Por favor, introduzca su altura</string>
    <string name="toastPesoVacioRegistroIncial">Peso no seleccionado. Por favor, introduzca su peso</string>
    <string name="toastEmailVerificacionEnviadoCorrectoRegistroIncial">Email de verificación enviado a:</string>
    <string name="toastEmailVerificacionEnviadoCorrectamenteRegistroIncial">¡Email de verificación enviado correctamente! Revise su correo y si no lo encuentra vaya a spam.</string>
    <string name="toastEmailVerificacionEnviadoIncorrectoRegistroIncial">Fallo al enviar email de verificación</string>
    <string name="toastCambiadaAlturaRegistroIncial">¡Has cambiado tu altura predeterminada!</string>
    <string name="toastCambiadoPesoRegistroIncial">¡Has cambiado tu peso predeterminado!</string>
    <string name="toastCambiadaTallaRegistroIncial">¡Has cambiado tu talla por defecto!</string>
    <string name="snackBarEnviarEmail">Email no verificado. ¿Quieres recibir un email de verificación?</string>
    <string name="snackBarBotonEnviarEmail">Sí, envíamelo</string>
    <string name="saludoMainActivityDrawer">Hola %1$s</string>
    <string name="saludoMainActivityDrawerAdmin">¡Hola Administrador!</string>
    <string name="prendasAnadidasMainActivityDrawer">Ha añadido un total de %1$d prendas </string>
    <string name="verMiArmarioMainActivityDrawer">Ver mi armario</string>
    <string name="usuariosRegistradosMainActivityDrawerAdmin">Los usuarios registrados son un total de %1$d</string>
    <string name="totalPrendasMainActivityDrawerAdmin">Se han añadido un total de %1$d prenda/s</string>
    <string name="texto1MainActivityDrawer">Mi Armario</string>
    <string name="texto2MainActivityDrawer">Añadir</string>
    <string name="texto2MainActivityDrawerAdmin">Añadir usuario</string>
    <string name="texto3MainActivityDrawer">Consultar</string>
    <string name="texto3MainActivityDrawerAdmin">Consultar usuarios</string>
    <string name="texto4MainActivityDrawer">Eliminar</string>
    <string name="texto4MainActivityDrawerAdmin">Eliminar usuario</string>
    <string name="texto5MainActivityDrawer">Intercambio</string>
    <string name="texto6MainActivityDrawer">Mi cuenta</string>
    <string name="texto6MainActivityDrawerAdmin">Cuenta</string>
    <string name="texto7MainActivityDrawer">Información</string>
    <string name="configuracionMainActivityDrawer">Configuración</string>
    <string name="appMainActivityDrawer">Operaciones</string>
    <string name="nombreActividadInfoPrendaCompleta">Información detallada</string>
    <string name="TallaPrendaActividadInfoPrendaCompleta">Talla:</string>
    <string name="estadoPrendaActividadInfoPrendaCompleta">Estado:</string>
    <string name="estadoLimpioPrendaActividadInfoPrendaCompleta">Limpio</string>
    <string name="estadoSucioPrendaActividadInfoPrendaCompleta">Sucio</string>
    <string name="cantidadPrendaActividadInfoPrendaCompleta">Cantidad:</string>
    <string name="marcaPrendaActividadInfoPrendaCompleta">Marca:</string>
    <string name="textoEstadoActividadInfoPrendaCompleta">¿Estado limpio?</string>
    <string name="textoIntercambioActividadInfoPrendaCompleta">¿Intercambiar?</string>
    <string name="nombreActividadConfiguracion">Configuración</string>
    <string name="nombreActividadInfoUsuarioCompleto">Información detallada</string>
    <string name="uidActividadInfoUsuarioCompleto">Uid:</string>
    <string name="nickNameActividadInfoUsuarioCompleto">Nickname:</string>
    <string name="alturaActividadInfoUsuarioCompleto">Altura:</string>
    <string name="pesoActividadInfoUsuarioCompleto">Peso:</string>
    <string name="tallaActividadInfoUsuarioCompleto">Talla:</string>
    <string name="fechaNacimientoActividadInfoUsuarioCompleto">Fecha de nacimiento:</string>
    <string name="generoActividadInfoUsuarioCompleto">Género:</string>
    <string name="nombreBotonActividadConsultar">Filtrar</string>
    <string name="sinFiltrosActividadConsultar">Sin filtros</string>
    <string name="filtroTallaActividadConsultar">Talla</string>
    <string name="filtroEstiloActividadConsultar">Estilo</string>
    <string name="filtroColorActividadConsultar">Color</string>
    <string name="filtroEpocaActividadConsultar">Época</string>
    <string name="filtroSubcategoriaActividadConsultar">Subcategoría</string>
    <string name="filtroMarcaActividadConsultar">Marca</string>
    <string name="textoBusquedaActividadConsultar">Búsqueda: %1$s  ➭  %2$s</string>
    <string-array name="arrayFiltros">
        <item>@string/sinFiltrosActividadConsultar</item>
        <item>@string/filtroTallaActividadConsultar</item>
        <item>@string/filtroEstiloActividadConsultar</item>
        <item>@string/filtroColorActividadConsultar</item>
        <item>@string/filtroEpocaActividadConsultar</item>
        <item>@string/filtroSubcategoriaActividadConsultar</item>
        <item>@string/filtroMarcaActividadConsultar</item>
    </string-array>
    <string name="nombreActividadMiCuenta">Mi cuenta</string>
    <string name="correoMiCuenta">%1$s</string>
    <string name="alturaMiCuenta">Mi altura es: <b>%1$s m</b></string>
    <string name="pesoMiCuenta">Mi peso es: <b>%1$d Kg</b></string>
    <string name="tallaMiCuenta">Talla por defecto: <b>%1$s</b></string>
    <string name="caracteristicasAppMiCuenta">Características:</string>
    <string name="opcionesAppMiCuenta">Opciones de mi Armario Virtual:</string>
    <string name="cerrarSesionMiCuenta">Cerrar sesión</string>
    <string name="cambiarPasswordMiCuenta">Cambiar mi contraseña</string>
    <string name="eliminarTodoContenidoArmarioMiCuenta">Eliminar todo el contenido de Mi Armario</string>
    <string name="eliminarTodoContenidoAdminArmarioMiCuenta">Resetear la base de datos global de Mi Armario</string>
    <string name="eliminarCuentaMiCuenta">Eliminar mi cuenta</string>
    <string name="eliminarCuentaCorrectoMiCuenta">¡Cuenta borrada correctamente!</string>
    <string name="desarrolladorActividadInformacion">Desarrollador:</string>
    <string name="nombreDesarrolladorInformacion">Ismael C. G.</string>
    <string name="copyRightInformacion">© 2019</string>
    <string name="agradecimientosInformacion">Agradecimientos:</string>
    <string name="agradecimientosInfoInformacion">A mis compañeros y todo el equipo de IT Poniente</string>
    <string name="textoInfoDialogEliminarCuenta">Para poder eliminar la sesión, debe introducir su contraseña:</string>
    <string name="aceptarDialogEliminarCuenta">Aceptar</string>
    <string name="cancelarDialogEliminarCuenta">Cancelar</string>
    <string name="tallaNumberPickerString">Selecciona una talla:</string>
</resources>