<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/appMainActivityDrawer">
        <menu>
            <item
                android:id="@+id/mi_armario"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/texto1MainActivityDrawer" />
            <item
                android:id="@+id/add_elemento"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/texto2MainActivityDrawer" />
            <item
                android:id="@+id/eliminar_elemento"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/texto3MainActivityDrawer" />
            <item
                android:id="@+id/consultar_elemento"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/texto4MainActivityDrawer" />
            <item
                android:id="@+id/intercambio"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/texto5MainActivityDrawer" />
        </menu>
    </item>

    <item android:title="@string/configuracionMainActivityDrawer">
        <menu>
            <item
                android:id="@+id/configuracion_usuario"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/texto6MainActivityDrawer" />
            <item
                android:id="@+id/desarrollador"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/texto7MainActivityDrawer" />
        </menu>
    </item>

</menu>
