<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivityDrawer"
    tools:showIn="@layout/app_bar_admin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/layoutSuperiorContentMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombreUsuario"
                    style="@style/saludoContentMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saludoMainActivityDrawerAdmin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="360sp"
                    app:srcCompat="@drawable/wardrobe_icon" />
            </LinearLayout>

            <LinearLayout
                style="@style/layoutTextoInformativoContentMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUsuariosTotales"
                    style="@style/prendasAddContentMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usuariosRegistradosMainActivityDrawerAdmin" />

                <TextView
                    android:id="@+id/tvPrendasTotales"
                    style="@style/prendasAddContentMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalPrendasMainActivityDrawerAdmin" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        style="@style/estiloTextoSuperiorBotonesAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/texto2MainActivityDrawerAdmin" />

                    <Button
                        android:id="@+id/bAnadirAdmin"
                        style="@style/estiloBotonesAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/texto2MainActivityDrawer" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView29"
                        style="@style/estiloTextoSuperiorBotonesAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/texto4MainActivityDrawerAdmin" />

                    <Button
                        android:id="@+id/bEliminarAdmin"
                        style="@style/estiloBotonesAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/texto4MainActivityDrawer" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView30"
                        style="@style/estiloTextoSuperiorBotonesAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/texto3MainActivityDrawerAdmin" />

                    <Button
                        android:id="@+id/bConsultarAdmin"
                        style="@style/estiloBotonesAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/texto3MainActivityDrawer" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>