<?xml version="1.0" encoding="utf-8"?><!--
<NumberPicker android:id="@+id/numberPickerGeneral"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" />  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutNumberPickerString"
        style="@style/estiloLayoutPrincipalNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            style="@style/estiloTextosNumberPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tallaNumberPickerString" />

        <NumberPicker
            android:id="@+id/npString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCancelarStringPicker"
                style="@style/PrimerRegistroBotonesNumberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondeado_number_picker"
                android:text="@string/cancelarNumberPickerRegistroInicial" />

            <Button
                android:id="@+id/bAceptarStringPicker"
                style="@style/PrimerRegistroBotonesNumberPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondeado_number_picker"
                android:text="@string/aceptarNumberPickerRegistroInicial" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>