<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/textoInfoDialogEliminarCuenta"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etPasswordReautentificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCancelarPassword"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:background="@drawable/boton_redondeado_number_picker"
                android:text="@string/cancelarDialogEliminarCuenta"
                android:textColor="@color/colorBlanco" />

            <Button
                android:id="@+id/bAceptarPassword"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:background="@drawable/boton_redondeado_number_picker"
                android:text="@string/aceptarDialogEliminarCuenta"
                android:textColor="@color/colorBlanco" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>